cluster-infra/traefik/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.codecorrupt.com`) # && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: traefik-auth-middleware
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
